--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 }
 
 html{
+  text-align: center;
   height: 100%;
   width: 100%;
 }
@@ -16,10 +17,6 @@ html{
 * {
   margin: 0;
   padding: 0;
-}
-
-.App {
-  text-align: center;
 }
 
 header{
@@ -72,7 +69,7 @@ p {
   font-family: 'Jost';
 }
 
-.body{
+.bodyApp{
   height: 83vh;
   background-color: rgba(214,201,149,255);
 }
@@ -81,4 +78,14 @@ footer{
   border-top: solid black;
   background-color: rgba(141,0,1,255);
   height: 12vh;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.bodyFormulaire {
+  height: 100vh;
+  background-color: rgba(150,180,201,255);
 }
